--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body {
 }
 
 .button-wrapper {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 button {
@@ -57,6 +58,12 @@ button {
 
 .blocked-tile {
     background-color: black;
+}
+
+.num-input {
+    width: 35px;
+    padding: 5px;
+    margin-right: 5px;
 }
 
 .visited {
