--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: #404040;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .col {
@@ -13,8 +14,8 @@ body {
 }
 
 .button-wrapper {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 button {
@@ -34,7 +35,7 @@ button {
 .tile {
     font-size: medium;
     text-align: right;
-    color: white;
+    color: rgba(255, 255, 255, 0.5);
     border-radius: 10%;
     width: 50px;
     height: 50px;
@@ -47,7 +48,7 @@ button {
 .tile-b {
     font-size: medium;
     text-align: right;
-    color: white;
+    color: rgba(255, 255, 255, 0.5);
     border-radius: 10%;
     width: 50px;
     height: 50px;
@@ -73,15 +74,15 @@ button {
 }
 
 .visited {
-    background-color: purple;
-    color: white;
+    background-color: rgb(112, 9, 112);
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .vl {
     border-left: 4px solid white;
     height: 50px;
     position: relative;
-    left: 50%;
+    left: 53%;
     margin-left: -2px;
     margin-top: -18px;
     top: 0;
@@ -89,11 +90,9 @@ button {
 
 .hl {
     border-bottom: 4px solid white;
-    width: 50px;
+    width: 54px;
     position: relative;
-    bottom: 50%;
-    margin-bottom: -2px;
-    margin-top: 10px;
+    margin-top: 6px;
     top: 0;
 }
 
@@ -104,7 +103,7 @@ button {
     height: 25px;
     position: relative;
     left: 50%;
-    top: -25%;
+    top: -37%;
     margin-bottom: -2px;
 }
 
@@ -114,7 +113,7 @@ button {
     width: 25px;
     height: 25px;
     position: relative;
-    top: -25%;
+    top: -37%;
     margin-bottom: -2px;
 }
 
@@ -124,10 +123,8 @@ button {
     width: 25px;
     height: 25px;
     position: relative;
-    left: 50%;
-    top: -25%;
-    margin-bottom: -2px;
-    top: 0;
+    left: 48%;
+    top: 10%;
 }
 
 .up-left {
@@ -136,7 +133,17 @@ button {
     width: 25px;
     height: 25px;
     position: relative;
-    bottom: 50%;
-    margin-bottom: -2px;
-    top: 0;
+    top: 10%;
+}
+
+.link {
+    color: white;
+    text-decoration: underline;
+    font-weight: bold;
+    margin: 1em 0;
+    margin-left: 5px;
+}
+
+.link:hover {
+    color: rgb(201, 201, 201)
 }
